--- a/uidp-cp/values.yaml
+++ b/uidp-cp/values.yaml
@@ -1,4 +1,29 @@
-releaseTag: v1
-cloudType: gcp  # [ local, azure, aws, gcp ]
-portType: LoadBalancer  # [ LoadBalancer, NodePort ]
-RBAC: true
+oneai:
+  secureRegistry: true
+  registryKey: "eyJhdXRocyI6eyJ1aWRwcmVnLmF6dXJlY3IuaW8iOnsidXNlcm5hbWUiOiJ1aWRwcmVnIiwicGFzc3dvcmQiOiJLaGZEdD1FPUcwOStQWGtoSW9CV2xXWkQ1MlBLR2VUcCIsImVtYWlsIjoiZ2x5bi5ib3dkZW5AaHBlLmNvbSIsImF1dGgiOiJkV2xrY0hKbFp6cExhR1pFZEQxRlBVY3dPU3RRV0d0b1NXOUNWMnhYV2tRMU1sQkxSMlZVY0E9PSJ9fX0="
+  releaseRepository: uidpreg.azurecr.io
+  releaseTag: v2
+  cloudType: local  # [ local, azure, aws, gcp ]
+  portType: LoadBalancer  # [ LoadBalancer, NodePort ]
+
+rbac:
+  create: false
+  serviceAccounts:
+    oneai:
+      - name: sa-oneai
+
+  roles:
+    oneai:
+      - name: r-oneai
+
+  roleBindings:
+    oneai:
+      - name: cr-oneai
+
+metallb:
+  install: false
+
+immuta:
+  install: false
+  valuesFile: immuta-values.yml
+
