--- a/uidp-cp/templates/build-service.yaml
+++ b/uidp-cp/templates/build-service.yaml
@@ -47,10 +47,10 @@ spec:
         component: uidp-cp-build-service
         app: uidp
     spec:
-      serviceAccountName: uidp
+      serviceAccountName: {{ .Values.rbac.serviceAccounts.oneai.name }}
       containers:
       - name: uidp-cp-build-service
-        image: uidpreg.azurecr.io/uidp-cp-build-service:{{ .Values.releaseTag }}
+        image: {{ .Values.oneai.releaseRepository }}/uidp-cp-build-service:{{ .Values.oneai.releaseTag }}
         imagePullPolicy: Always
         ports:
         - containerPort: 8110
