--- a/uidp-cp/templates/serviceaccount.yaml
+++ b/uidp-cp/templates/serviceaccount.yaml
@@ -1,9 +1,9 @@
 ---
-{{ if .Values.RBAC -}}
+{{ if .Values.rbac.create -}}
 apiVersion: rbac.authorization.k8s.io/v1beta1
 kind: ClusterRole
 metadata:
-  name: uidp
+  name: {{ .Values.rbac.roles.oneai.name }}
 rules:
 - apiGroups: [""]
   resources:
@@ -21,20 +21,20 @@ rules:
 apiVersion: v1
 kind: ServiceAccount
 metadata:
-  name: uidp
+  name: {{ .Values.rbac.serviceAccounts.oneai.name }}
 automountServiceAccountToken: true
 ---
 apiVersion: rbac.authorization.k8s.io/v1beta1
 kind: ClusterRoleBinding
 metadata:
-  name: uidp
+  name: {{ .Values.rbac.roleBindings.oneai.name }}
 roleRef:
   apiGroup: rbac.authorization.k8s.io
   kind: ClusterRole
-  name: uidp
+  name: {{ .Values.rbac.roles.oneai.name }}
 subjects:
 - kind: ServiceAccount
-  name: uidp
+  name: {{ .Values.rbac.serviceAccounts.oneai.name }}
   namespace: {{ .Release.Namespace }}
 ---
 {{ end -}}
