Updated the apps/v1 version to apps/v1beta2 for Docker EE support

--- a/uidp-cp/templates/build-service.yaml
+++ b/uidp-cp/templates/build-service.yaml
@@ -26,7 +26,7 @@ spec:
     port: 8110
     targetPort: 8110
 ---
-apiVersion: apps/v1
+apiVersion: apps/v1beta2
 kind: Deployment
 metadata:
   name: uidp-cp-build-service
