--- a/uidp-cp/templates/environment-service.yaml
+++ b/uidp-cp/templates/environment-service.yaml
@@ -26,7 +26,7 @@ spec:
     port: 8102
     targetPort: 8102
 ---
-apiVersion: apps/v1
+apiVersion: apps/v1beta2
 kind: Deployment
 metadata:
   name: uidp-cp-environment-service
