--- a/uidp-cp/templates/oneai-ui.yaml
+++ b/uidp-cp/templates/oneai-ui.yaml
@@ -22,7 +22,7 @@ spec:
     targetPort: 3000
     name: nodejs
 ---
-apiVersion: apps/v1
+apiVersion: apps/v1beta2
 kind: Deployment
 metadata:
   name: uidp-ui
