--- a/uidp-cp/templates/redis-master-deployment.yaml
+++ b/uidp-cp/templates/redis-master-deployment.yaml
@@ -16,7 +16,7 @@ spec:
     role: master
     tier: backend
 ---
-apiVersion: apps/v1 # for versions before 1.9.0 use apps/v1beta2
+apiVersion: apps/v1beta2 # for versions before 1.9.0 use apps/v1beta2
 kind: Deployment
 metadata:
   name: redis-master
