--- a/uidp-cp/templates/usecase-service.yaml
+++ b/uidp-cp/templates/usecase-service.yaml
@@ -27,7 +27,7 @@ spec:
     targetPort: 8101
 ---
 # Use case service deployment
-apiVersion: apps/v1
+apiVersion: apps/v1beta2
 kind: Deployment
 metadata:
   name: uidp-cp-usecase-service
