--- a/uidp-cp/templates/keycloak.yaml
+++ b/uidp-cp/templates/keycloak.yaml
@@ -78,7 +78,7 @@ spec:
     targetPort: 8080
 ---
 # Keycloak Deployment
-apiVersion: apps/v1
+apiVersion: apps/v1beta2
 kind: Deployment
 metadata:
   namespace: {{ .Release.Namespace }}
@@ -135,7 +135,7 @@ spec:
               name: http
 ---
 # Auth proxy deployment
-apiVersion: apps/v1
+apiVersion: apps/v1beta2
 kind: Deployment
 metadata:
   name: uidp-cp-auth-proxy
