Added the seldon charts (in testing) and pushed the UI behind Ambassador to simplify URL targeting

--- a/uidp-cp/templates/oneai-ui.yaml
+++ b/uidp-cp/templates/oneai-ui.yaml
@@ -4,13 +4,24 @@ apiVersion: v1
 kind: Service
 metadata:
   name: uidp-ui
+  namespace: {{ .Release.Namespace }}
+  annotations:
+    getambassador.io/config: |
+      ---
+      apiVersion: ambassador/v0
+      kind:  Mapping
+      name:  build-mapping
+      prefix: /ui/
+      rewrite: /
+      service: ui-service:80
+      cors:
+        origins: "*"
+        headers: Content-Type, Authorization, Accept
   labels:
     app: uidp-ui
-  namespace: {{ .Release.Namespace }}
 spec:
   selector:
     app: uidp-ui
-  type: {{ .Values.oneai.portType }}
   ports:
   - port: 80
     targetPort: 80
