--- a/uidp-cp/values.yaml
+++ b/uidp-cp/values.yaml
@@ -11,6 +11,8 @@ rbac:
   serviceAccounts:
     oneai:
       name: sa-oneai
+    seldon:
+      name: sa-seldon
 
   roles:
     oneai:
@@ -27,3 +29,31 @@ immuta:
   install: false
   valuesFile: immuta-values.yml
 
+seldon:
+  install: true
+
+  apife:
+    annotations: null
+    enabled: true
+    image:
+      name: seldonio/apife:0.2.5-SNAPSHOT
+      pull_policy: IfNotPresent
+    service_type: NodePort
+
+  cluster_manager:
+    image:
+      name: seldonio/cluster-manager:0.2.5-SNAPSHOT
+      pull_policy: IfNotPresent
+    java_opts: ''
+    spring_opts: ''
+  engine:
+    image:
+      name: seldonio/engine:0.2.5-SNAPSHOT
+      pull_policy: IfNotPresent
+    service_account:
+      name: default
+
+redis:
+  install: true
+  image:
+    name: redis:4.0.1
