--- a/uidp-cp/templates/oneai-ui.yaml
+++ b/uidp-cp/templates/oneai-ui.yaml
@@ -10,10 +10,10 @@ metadata:
       ---
       apiVersion: ambassador/v0
       kind:  Mapping
-      name:  build-mapping
-      prefix: /ui/
+      name:  ui-mapping
+      prefix: /
       rewrite: /
-      service: ui-service:80
+      service: uidp-ui:80
       cors:
         origins: "*"
         headers: Content-Type, Authorization, Accept
