Updated the ambassador container and the seldon check

--- a/uidp-cp/templates/ambassador.yaml
+++ b/uidp-cp/templates/ambassador.yaml
@@ -45,6 +45,8 @@ spec:
         service: ambassador
     spec:
       serviceAccountName: {{ .Values.rbac.serviceAccounts.oneai.name }}
+      imagePullSecrets:
+      - name: regcred-{{ .Release.Name }}
       containers:
       - name: ambassador
         image: {{ .Values.oneai.releaseRepository }}/uidp-ambassador:{{ .Values.oneai.releaseTag }}
