--- a/uidp-cp/templates/build-service.yaml
+++ b/uidp-cp/templates/build-service.yaml
@@ -54,6 +54,19 @@ spec:
         imagePullPolicy: Always
         ports:
         - containerPort: 8110
+        env:
+          - name: POSTGRES_USER
+            valueFrom:
+              secretKeyRef:
+                name: uidp-postgres-credentials
+                key: user
+          - name: POSTGRES_PASSWORD
+            valueFrom:
+              secretKeyRef:
+                name: uidp-postgres-credentials
+                key: password
+          - name: POSTGRES_HOST
+            value: uidp-postgres
       imagePullSecrets:
       - name: regcred-{{ .Release.Name }}
 ---
