--- a/uidp-cp/templates/datasource-service.yaml
+++ b/uidp-cp/templates/datasource-service.yaml
@@ -54,6 +54,20 @@ spec:
         imagePullPolicy: Always
         ports:
         - containerPort: 8104
+        env:
+          - name: POSTGRES_USER
+            valueFrom:
+              secretKeyRef:
+                name: uidp-postgres-credentials
+                key: user
+          - name: POSTGRES_PASSWORD
+            valueFrom:
+              secretKeyRef:
+                name: uidp-postgres-credentials
+                key: password
+          - name: POSTGRES_HOST
+            value: uidp-postgres
+
       {{ if .Values.oneai.secureRegistry -}}
       imagePullSecrets:
       - name: regcred-{{ .Release.Name }}
