--- a/uidp-cp/templates/keycloak.yaml
+++ b/uidp-cp/templates/keycloak.yaml
@@ -1,4 +1,3 @@
----
 # Keycloak admin password
 apiVersion: v1
 kind: Secret
@@ -129,7 +128,21 @@ spec:
             - name: PROXY_ADDRESS_FORWARDING
               value: "true"
             - name: DB_VENDOR
-              value: H2
+              value: postgres
+            - name: DB_DATABASE
+              value: oai_keycloak
+            - name: DB_ADDR
+              value: uidp-postgres
+            - name: DB_USER
+              valueFrom:
+                secretKeyRef:
+                  name: uidp-postgres-credentials
+                  key: user
+            - name: DB_PASSWORD
+              valueFrom:
+                secretKeyRef:
+                  name: uidp-postgres-credentials
+                  key: password
           ports:
             - containerPort: 8080
               name: http
