Work in progress on the catalogue UI and component UI.

--- a/uidp-cp/values.yaml
+++ b/uidp-cp/values.yaml
@@ -1,8 +1,7 @@
 oneai:
-  secureRegistry: false
-  # registryKey: "eyJhdXRocyI6eyJ1aWRwcmVnLmF6dXJlY3IuaW8iOnsidXNlcm5hbWUiOiJ1aWRwcmVnIiwicGFzc3dvcmQiOiJLaGZEdD1FPUcwOStQWGtoSW9CV2xXWkQ1MlBLR2VUcCIsImVtYWlsIjoiZ2x5bi5ib3dkZW5AaHBlLmNvbSIsImF1dGgiOiJkV2xrY0hKbFp6cExhR1pFZEQxRlBVY3dPU3RRV0d0b1NXOUNWMnhYV2tRMU1sQkxSMlZVY0E9PSJ9fX0="
-  # releaseRepository: uidpreg.azurecr.io
-  releaseRepository: gcr.io/avid-relic-228213
+  secureRegistry: true
+  registryKey: "eyJhdXRocyI6eyJ1aWRwcmVnLmF6dXJlY3IuaW8iOnsidXNlcm5hbWUiOiJ1aWRwcmVnIiwicGFzc3dvcmQiOiJLaGZEdD1FPUcwOStQWGtoSW9CV2xXWkQ1MlBLR2VUcCIsImVtYWlsIjoiZ2x5bi5ib3dkZW5AaHBlLmNvbSIsImF1dGgiOiJkV2xrY0hKbFp6cExhR1pFZEQxRlBVY3dPU3RRV0d0b1NXOUNWMnhYV2tRMU1sQkxSMlZVY0E9PSJ9fX0="
+  releaseRepository: uidpreg.azurecr.io
   releaseTag: v2
   cloudType: local  # [ local, azure, aws, gcp ]
   portType: LoadBalancer  # [ LoadBalancer, NodePort ]
